--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,7 +29,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   line_icons:
-  flutter_svg: ^0.18.0
+  flutter_svg: ^0.20.0-nullsafety.3
   carousel_slider: ^2.2.1
   animate_do: ^1.7.3
 
